--- a/public/cn/index.html
+++ b/public/cn/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>http://kechang.github.io/</title>
-    <link rel="canonical" href="http://kechang.github.io/">
+    <title>https://blog.joway.io/</title>
+    <link rel="canonical" href="https://blog.joway.io/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=http://kechang.github.io/">
+    <meta http-equiv="refresh" content="0; url=https://blog.joway.io/">
   </head>
 </html>
